set up html page and start of js

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Las Vegas Quiz!</title>
     <link rel="stylesheet" href="/style.css"></link>
 </head>
 <body>
-    M1 Projectcoo
+    <div class="quiz-container"></div>
+    <div id="question">Question will be displayed here</div>
+    <div id="choices" class="choices">
+        <button class="choice">Choice 1</button>
+        <button class="choice">Choice 2</button>
+        <button class="choice">Choice 3</button>
+        <button class="choice">Choice 4</button>
+    </div>
+    <button id="sumbit">Submit Answer</button>
+</div>
+<div id="result"></div>
+<script src="index.js"></script>
 </body>
 </html>
