--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <button id="sumbit">Submit Answer</button>
 </div>
 <div id="result"></div>
-<script src="index.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
