added eventlistener and debugging javascript code

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="/style.css"></link>
 </head>
 <body>
-    <div class="quiz-container"></div>
-    <div id="question">Question will be displayed here</div>
-    <div id="choices" class="choices">
-        <button class="choice">Choice 1</button>
-        <button class="choice">Choice 2</button>
-        <button class="choice">Choice 3</button>
-        <button class="choice">Choice 4</button>
+    <div class="quiz-container">
+        <div id="question">Question will be displayed here</div>
+        <div id="choices" class="choices">
+            <button class="choice">Choice 1</button>
+            <button class="choice">Choice 2</button>
+            <button class="choice">Choice 3</button>
+            <button class="choice">Choice 4</button>
+        </div>
+        <button id="submit">Submit Answer</button>
+        <div id="result"></div>
     </div>
-    <button id="sumbit">Submit Answer</button>
-</div>
-<div id="result"></div>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
