--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css"></link>
 </head>
 <body>
-    <img src="https://images.pexels.com/photos/161772/las-vegas-nevada-cities-urban-161772.jpeg" alt="Las Vegas Strip">
+    <img id="image" src="https://images.pexels.com/photos/161772/las-vegas-nevada-cities-urban-161772.jpeg" alt="image">
     <div class="quiz-container">
         <div id="question">Question will be displayed here</div>
         <div id="choices" class="choices">
